--- a/인투처치/ministry/templates/ministry/dashboard.html
+++ b/인투처치/ministry/templates/ministry/dashboard.html
@@ -317,7 +317,7 @@
     </div>
 
     <script type="text/javascript"
-        src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=YOUR_CLIENT_ID"></script> <!-- 나중에 바꿔야 함 -->
+        src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=nm5q0b1hyn"></script>
 
     <script>
         // 지도가 로드된 후 실행
@@ -386,5 +386,6 @@
     </footer>
 
 </body>
+
 
 </html>
