--- a/인투처치/ministry/templates/ministry/dashboard.html
+++ b/인투처치/ministry/templates/ministry/dashboard.html
@@ -317,7 +317,7 @@
     </div>
 
     <script type="text/javascript"
-        src="https://openapi.map.naver.com/openapi/v3/maps.js?ClientId=nm5q0b1hyn"></script>
+        src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpKeyId=nm5q0b1hyn"></script>
 
     <script>
         // 지도가 로드된 후 실행
@@ -389,4 +389,5 @@
 
 
 </html>
+
 
