인스타 코드 입력...

--- a/ministry/templates/ministry/dashboard.html
+++ b/ministry/templates/ministry/dashboard.html
@@ -260,7 +260,12 @@
 
         <div
             class="rounded-3xl overflow-hidden shadow-xl border border-slate-100 dark:border-slate-700 bg-white dark:bg-slate-800 p-4">
-            <p class="text-center text-slate-400 py-10">위젯 코드를 이곳에 넣어주세요.</p>
+            <p class="text-center text-slate-400 py-10"><!-- SnapWidget -->
+                <script src="https://snapwidget.com/js/snapwidget.js"></script>
+                <iframe src="https://snapwidget.com/embed/1114821" class="snapwidget-widget" allowtransparency="true"
+                    frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:100%; "
+                    title="title 쓰는 곳"></iframe>
+            </p>
 
         </div>
     </div>
