--- a/ministry/templates/ministry/dashboard.html
+++ b/ministry/templates/ministry/dashboard.html
@@ -254,17 +254,22 @@
                     class="bg-gradient-to-tr from-yellow-400 via-red-500 to-purple-600 text-white p-2 rounded-lg mr-3">📸</span>
                 교회 인스타그램
             </h2>
-            <a href="#" target="_blank"
+            <a href="https://www.instagram.com/choihyunseok_/" target="_blank"
                 class="text-sm text-slate-400 hover:text-brand-600 transition font-mono">@choihyunseok_</a>
         </div>
 
         <div
             class="rounded-3xl overflow-hidden shadow-xl border border-slate-100 dark:border-slate-700 bg-white dark:bg-slate-800 p-4">
-            <p class="text-center text-slate-400 py-10"><!-- SnapWidget -->
+            <p class="text-center text-slate-400 py-10">
+
+                <!-- SnapWidget code쓰는곳-->
                 <script src="https://snapwidget.com/js/snapwidget.js"></script>
-                <iframe src="https://snapwidget.com/embed/1114821" class="snapwidget-widget" allowtransparency="true"
+                <iframe src="https://snapwidget.com/embed/1114824" class="snapwidget-widget" allowtransparency="true"
                     frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:100%; "
-                    title="title 쓰는 곳"></iframe>
+                    title="rr"></iframe>
+                <!-- SnapWidget code쓰는곳-->
+
+
             </p>
 
         </div>
