인스타 ui 화면 좁아질때 넓을때 다른 api 가져오기

--- a/ministry/templates/ministry/dashboard.html
+++ b/ministry/templates/ministry/dashboard.html
@@ -264,10 +264,21 @@
 
                 <!-- SnapWidget code쓰는곳-->
                 <script src="https://snapwidget.com/js/snapwidget.js"></script>
+
+                <!-- PC용 (화면 넓을 때 보임) -->
+            <div class="hidden md:block">
                 <iframe src="https://snapwidget.com/embed/1114824" class="snapwidget-widget" allowtransparency="true"
                     frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:100%; "
-                    title="rr"></iframe>
-                <!-- SnapWidget code쓰는곳-->
+                    title="홈페이지 제작자 인스타그램 PC"></iframe>
+            </div>
+
+            <!-- 모바일용 (화면 좁을 때 보임) -->
+            <div class="block md:hidden">
+                <iframe src="https://snapwidget.com/embed/1114826" class="snapwidget-widget" allowtransparency="true"
+                    frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:100%; "
+                    title="홈페이지 제작자 인스타그램 Mobile"></iframe>
+            </div>
+            <!-- SnapWidget code쓰는곳-->
 
 
             </p>
