화면 커도 작았을때 화면처럼 나옴

--- a/ministry/templates/ministry/dashboard.html
+++ b/ministry/templates/ministry/dashboard.html
@@ -258,33 +258,27 @@
                 class="text-sm text-slate-400 hover:text-brand-600 transition font-mono">@choihyunseok_</a>
         </div>
 
+
         <div
             class="rounded-3xl overflow-hidden shadow-xl border border-slate-100 dark:border-slate-700 bg-white dark:bg-slate-800 p-4">
-            <p class="text-center text-slate-400 py-10">
+            <script src="https://snapwidget.com/js/snapwidget.js"></script>
 
-                <!-- SnapWidget code쓰는곳-->
-                <script src="https://snapwidget.com/js/snapwidget.js"></script>
-
-                <!-- PC용 (화면 넓을 때 보임) -->
-            <div class="hidden md:block">
+            <div class="hidden md:!block">
                 <iframe src="https://snapwidget.com/embed/1114824" class="snapwidget-widget" allowtransparency="true"
-                    frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:100%; "
+                    frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; height:400px;"
                     title="홈페이지 제작자 인스타그램 PC"></iframe>
             </div>
 
-            <!-- 모바일용 (화면 좁을 때 보임) -->
-            <div class="block md:hidden">
+            <div class="block md:!hidden">
                 <iframe src="https://snapwidget.com/embed/1114826" class="snapwidget-widget" allowtransparency="true"
-                    frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:100%; "
+                    frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; height:800px;"
                     title="홈페이지 제작자 인스타그램 Mobile"></iframe>
             </div>
-            <!-- SnapWidget code쓰는곳-->
-
-
-            </p>
-
         </div>
+
+
     </div>
+
     <!-- Youtube & Map -->
     <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-20" data-aos="fade-up">
 
